target 调整源文件路径

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -3,7 +3,7 @@ use_frameworks!
 platform :ios, '9.0'
 
 target 'WPCommand_Example' do
-  pod 'WPCommand', :path => '../'
+#  pod 'WPCommand', :path => '../'
 #  pod 'Kingfisher'
 #  pod 'RxSwift'
 
