--- a/Example/Podfile
+++ b/Example/Podfile
@@ -4,10 +4,10 @@ platform :ios, '10.0'
 
 target 'WPCommand_Example' do
   pod 'WPCommand', :path => '../'
+  pod 'MJRefresh'
 
   target 'WPCommand_Tests' do
     inherit! :search_paths
-
     
   end
 end
